# gsoap-onvif

./: .gitignore  CMakeLists.txt  README.md
factory/: CMakeLists.txt  workloop.cmake
factory/include/: channel.hpp  fs.hpp  reader.hpp  workloop.hpp
factory/src/: fs.cpp  reader.cpp
factory/test/: test_analyser.cpp
include/: logger.hpp  teacher.hpp
src/: main.cpp  teacher.cpp
